--- a/app/src/main/res/xml/base_accessibility_config.xml
+++ b/app/src/main/res/xml/base_accessibility_config.xml
@@ -6,6 +6,7 @@
     android:canRetrieveWindowContent="true"
     android:description="@string/base_ser_desc"
     android:notificationTimeout="10"
+    android:canPerformGestures="true"
     android:canRequestEnhancedWebAccessibility="true"
     android:settingsActivity=".MainActivity"
     android:summary="基础导航/视图检索操作"/>
