--- a/app/src/main/res/xml/accessibility_config.xml
+++ b/app/src/main/res/xml/accessibility_config.xml
@@ -7,6 +7,7 @@
     android:description="@string/base_ser_desc"
     android:notificationTimeout="10"
     android:canPerformGestures="true"
+    android:canTakeScreenshot="true"
     android:canRequestEnhancedWebAccessibility="true"
     android:settingsActivity=".MainActivity"
     android:summary="基础导航/视图检索操作"/>
